# hex-motor-gui

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: smartknob.md
public/urdf/gp80/meshes/visual/: base_link.STL
public/urdf/gr80/meshes/collision/: Link_1.stl  Link_4.stl  base_link.stl
public/urdf/gr80/meshes/visual/: Link_5.stl
src/: App.css  App.tsx  api.ts  canopen.ts  format.ts  i18n.tsx  liftCommissionProtocol.ts  types.ts  useCanTrace.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: analyzer.rs  backend.rs  commands.rs  diag.rs  hopea3.rs  lib.rs  lift.rs  lift_commission.rs  rollercan.rs  sdo_client.rs  smartknob.rs  state.rs  unified_smartknob.rs  zenoh_arm.rs  zenoh_base.rs  zenoh_config.rs  zenoh_ee.rs  zenoh_wifi.rs
src/components/: ArmPanel.tsx  ArmViewer.tsx  BasePoseViewer.tsx  CanAnalyzerPanel.css  CanAnalyzerPanel.tsx  ControllerConfigPanel.css  ControllerConfigPanel.tsx  DiagnosticsPanel.tsx  EePanel.tsx  EeQuickStrip.tsx  Hopea3Panel.tsx  LiftCommissioningCard.tsx  LiftPanel.css  LiftPanel.tsx  MachineViewer.tsx  RobotConsole.tsx  SmartKnobPanel.tsx  Tutorial.tsx  WifiSettingsDrawer.tsx  ZenohPanel.tsx
test/: liftCommissionProtocol.test.ts
