[package]
name = "hex-motor-gui"
version = "0.1.0"
edition = "2021"
description = "Tauri GUI for the hex-motor CiA402 driver."
license = "MIT OR Apache-2.0"

[lib]
name = "hex_motor_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
chrono = "0.4"
# Local path while we add Robot Application support (bus() accessor + RPDO
# config builder). Switch back to a crates.io version once published.
# hex-motor = { path = "../../hex-motor" }
hex-motor = "0.1.1"

# The `gs_usb` backend (candleLight over USB, CAN-FD) is cross-platform, so
# it's enabled on every target. On Linux we additionally build `socketcan`.
# Adding another backend is a single arm in src/backend.rs; the rest of the
# GUI keeps holding an `Arc<dyn CanBus>` and never knows the difference.
# can-transport comes from crates.io (same source hex-motor uses), so the
# `CanBus` trait is a single type across the graph — no [patch] needed.
[target.'cfg(target_os = "linux")'.dependencies]
can-transport = { version = "0.1.1", features = ["socketcan", "gs_usb"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
can-transport = { version = "0.1.1", features = ["gs_usb"] }
