[package]
name = "hex-motor-gui"
version = "1.0.1"
edition = "2021"
description = "Tauri GUI for the hex-motor CiA402 driver."
license = "MIT OR Apache-2.0"

[lib]
name = "hex_motor_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3"   # 自带 protoc,免系统安装

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
# analyzer.rs 的 TxMirror 要给 can-transport 的 #[async_trait] trait 写 impl。
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
getrandom = "0.3"
chrono = "0.4"
# Local path while we add Robot Application support (bus() accessor + RPDO
# config builder). Switch back to a crates.io version once published.
# hex-motor = { path = "../../hex-motor" }
hex-motor = "0.1.1"

# CAN Analyzer 的 SDO tab:纯 SDO 客户端(读/写对象字典),与 comeow CLI 同一引擎,
# 跑在分析仪已持有的 Arc<dyn CanBus> 上。值编解码逻辑移植自 comeow(见 sdo_client.rs)。
canopen-sdo = { version = "0.1.1", default-features = false, features = ["tokio"] }

# Base(Zenoh):连 hex-controller 暴露的 robot_api。
zenoh = "1"
prost = "0.13"
# 机械臂动力学(重力 G(q)):host 端 tau_ff 前馈,与控制器 GRAVITY_COMP 共用同一 crate(仅依赖 urdf-rs)。
# crates.io 版(CI 需要)。本地开发未发布改动时可临时改回 { path = "../../hex-arm-dynamics" }。
hex-arm-dynamics = "0.1.0"

# The `gs_usb` backend (candleLight over USB, CAN-FD) is cross-platform, so
# it's enabled on every target. On Linux we additionally build `socketcan`.
# Adding another backend is a single arm in src/backend.rs; the rest of the
# GUI keeps holding an `Arc<dyn CanBus>` and never knows the difference.
# can-transport comes from crates.io (same source hex-motor uses), so the
# `CanBus` trait is a single type across the graph — no [patch] needed.
[target.'cfg(target_os = "linux")'.dependencies]
can-transport = { version = "0.1.2", features = ["socketcan", "gs_usb"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
can-transport = { version = "0.1.2", features = ["gs_usb"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Media"] }
